# data_store

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  datastore.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: binaryf.hpp  codec.hpp  datastore.hpp  sqlitef.hpp
