CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(example)

SET(CXX_STANDARD 14)
SET(DEPENDS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
SET(MSGPACK_USE_BOOST OFF)

ADD_SUBDIRECTORY(${DEPENDS_DIR}/mio)
ADD_SUBDIRECTORY(${DEPENDS_DIR}/msgpack-c)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC mio msgpack-cxx)